<resources>
    <string name="app_name">DiabetesManager</string>
    <string name="reminders">Reminders:</string>
    <string name="recent_activity">Recent Activities:</string>
    <string name="hint_type">Type</string>
    <string name="delete">Delete</string>

    <!--Navigation Button Labels-->
    <string name="home_button">Home</string>
    <string name="activities_button">Activities</string>
    <string name="statistics_button">Statistics</string>
    <string name="add_activity_button">Add New Activity</string>
    <string name="regimen_button">regimen</string>

    <!--Activity Form Recycler View-->
    <string name="date_hint">Date (MM/DD/YYYY)</string>
    <string name="time_hint">Time (HH:MM)</string>

    <string name="description_hint">Description</string>
    <string name="amount_hint">Amount</string>

    <string name="bgl_label">BGL</string>
    <string name="diet_label">Diet</string>
    <string name="exercise_label">Exercise</string>
    <string name="medication_label">Medication</string>

    <!--Activity Form-->
    <string name="activity_form_title">Add An Activity</string>
    <string name="activity_form_hint_description">Activity Description</string>
    <string name="activity_form_hint_duration">Duration</string>
    <string name="activity_form_hint_heart_rate">Average Heart Rate</string>
    <string name="activity_form_hint_date">Date</string>
    <string name="activity_form_hint_time">Time</string>
    <string name="activity_form_add">Add</string>
    <string name="activity_form_type">Activity Type:</string>


    <!--Statistics Page-->
    <string name="graph_button">Graph</string>
    <string name="list_button">List</string>
    <string name="display_stats_button">Stats</string>
    <string name="search_button">Search</string>
    <string name="by_date_label">By Date:</string>
    <string name="from_hint">From</string>
    <string name="to_hint">To</string>
    <string name="keyword_label">Or by Keyword:</string>
    <string name="keyword_hint">Keyword</string>
    <string name="activity_label">Activity</string>
    <string name="date_time_label">DateTime</string>
    <string name="amount_label">Amount</string>
    <string name="activity_text">Activity</string>
    <string name="date_time_text">DateTime</string>
    <string name="amount_text">Amount</string>

    <!--Calculations fragment-->
    <string name = "standard_dev">Standard Deviation: </string>
    <string name = "mean">Mean: </string>
    <string name = "total">Total: </string>

    <!-- Register and SignIn Labels -->
    <string name= "userName_hint">Username</string>
    <string name= "passWord_hint">Password</string>
    <string name= "email_hint">Email Address</string>
    <string name= "register_button">Register</string>
    <string name= "Login_button">Login</string>
    <string name= "register_here_button">Register Here</string>
    <string name= "LogOut">Logout</string>
    <string name= "rememberMe_checkbox">Remember Me</string>

    <!--Activity Spinner-->
    <string-array name="activity_type_array">
        <item>Diet</item>
        <item>Exercise</item>
        <item>Medication</item>
        <item>BGL</item>
    </string-array>
</resources>
