<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent">

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/delete"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_type"
            android:textColor="@color/colorAccentText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewShortDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_hint"
            android:textColor="@color/colorAccentText"/>

        <TextView
            android:id="@+id/textViewAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount_hint"
            android:textColor="@color/colorAccentText"/>

        <TextView
            android:id="@+id/textViewTimeStamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_time_label"
            android:textColor="@color/colorAccentText"/>

    </LinearLayout>


</LinearLayout>