<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorDietItem">
    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diet_label"
        android:textColor="@color/colorAccentText"/>
    <EditText
        android:id="@+id/item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/description_hint"
        android:textColor="@color/colorAccentText"
        android:inputType="text"/>
    <EditText
        android:id="@+id/item_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/amount_hint"
        android:textColor="@color/colorAccentText"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/item_date"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/date_hint"
            android:textColor="@color/colorAccentText"
            android:inputType="date"/>
        <EditText
            android:id="@+id/item_time"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/time_hint"
            android:textColor="@color/colorAccentText"
            android:inputType="time"/>

    </LinearLayout>
</LinearLayout>